--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "react": "^16.3.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.1",
+    "react-slick": "^0.23.1",
+    "react-slideshow-image": "^0.2.2",
     "request": "^2.85.0",
     "style-loader": "^0.20.3",
     "twit": "^2.2.9",
