--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^16.3.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.1",
+    "react-dropdown": "^1.4.2",
     "react-slick": "^0.23.1",
     "react-slideshow-image": "^0.2.2",
     "request": "^2.85.0",
